--- a/templates/add_domain.html
+++ b/templates/add_domain.html
@@ -30,12 +30,10 @@
     var socket = io.connect('https://' + document.domain + ':' + location.port);
     socket.on('message', function (msg) {
         addMessage(msg, 'info');
-        displayTempMessages(); // Display messages on receiving socket message
     });
 
     socket.on('error', function (msg) {
         addMessage(msg, 'danger');
-        displayTempMessages(); // Display messages on receiving socket error
     });
 
     socket.on('console', function (msg) {
@@ -105,6 +103,7 @@
         if (currentStepIndex < steps.length && !hasErrorOccurred) {
             console.log(`Executing step: (${currentStepIndex}) ${steps[currentStepIndex].name}`);
             updateProgressBar();
+            displayTempMessages();
             steps[currentStepIndex].func(domain);
         } else if (!hasErrorOccurred) {
             console.log('All steps completed');
@@ -141,7 +140,6 @@
                 addMessage(`Le domaine ${domain} n'est pas encore enregistré. Vérification de la disponibilité...`, 'info');
             }
             currentStepIndex++;
-            displayTempMessages(); // Display messages after each step
             executeNextStep(domain);
         }).fail(function () {
             handleError('Erreur lors de la vérification de la possession du domaine.', true, domain);
@@ -153,7 +151,6 @@
             console.log('Domain availability check result:', data);
             if (data.status === 'available') {
                 currentStepIndex++;
-                displayTempMessages(); // Display messages after each step
                 executeNextStep(domain);
             } else {
                 handleError(`Le domaine ${domain} n'est pas disponible.`, true, domain);
@@ -168,7 +165,6 @@
             console.log('Domain purchase result:', data);
             if (data.status === 'purchased') {
                 currentStepIndex++;
-                displayTempMessages(); // Display messages after each step
                 executeNextStep(domain);
             } else {
                 handleError(`Erreur lors de l'achat du domaine ${domain}.`, true, domain);
@@ -183,7 +179,6 @@
             console.log('DNS configuration result:', data);
             if (data.status === 'configured') {
                 currentStepIndex++;
-                displayTempMessages(); // Display messages after each step
                 executeNextStep(domain);
             } else {
                 handleError(`Erreur lors de la configuration du DNS pour ${domain}.`, true, domain);
@@ -198,7 +193,6 @@
             console.log('Nginx config creation result:', data);
             if (data.status === 'created') {
                 currentStepIndex++;
-                displayTempMessages(); // Display messages after each step
                 executeNextStep(domain);
             } else {
                 handleError(`Erreur lors de la création de la configuration Nginx pour ${domain}.`);
@@ -213,7 +207,6 @@
             console.log('SSL setup result:', data);
             if (data.status === 'setup') {
                 currentStepIndex++;
-                displayTempMessages(); // Display messages after each step
                 executeNextStep(domain);
             } else {
                 handleError(`Erreur lors de la configuration du SSL pour ${domain}.`, true, domain);
@@ -228,7 +221,6 @@
             console.log('WordPress installation result:', data);
             if (data.status === 'installed') {
                 currentStepIndex++;
-                displayTempMessages(); // Display messages after each step
                 executeNextStep(domain);
             } else {
                 handleError(`Erreur lors de l'installation de WordPress pour ${domain}.`, true, domain);
@@ -243,7 +235,6 @@
             console.log('Git repository initialization result:', data);
             if (data.status === 'initialized') {
                 currentStepIndex++;
-                displayTempMessages(); // Display messages after each step
                 executeNextStep(domain);
             } else {
                 handleError(`Erreur lors de l'initialisation du dépôt Git pour ${domain}.`, true, domain);
@@ -258,7 +249,6 @@
             console.log('Static deployment result:', data);
             if (data.status === 'deployed') {
                 currentStepIndex++;
-                displayTempMessages(); // Display messages after each step
                 executeNextStep(domain);
             } else {
                 handleError(`Erreur lors du déploiement statique pour ${domain}.`, true, domain);
@@ -275,7 +265,6 @@
             steps[currentStepIndex].func(domain);
         } else {
             addMessage(errorMessage, 'danger');
-            displayTempMessages(); // Display messages on error
             hasErrorOccurred = true;
             document.getElementById('submitButtonInternetBS').disabled = false;
             document.getElementById('submitButtonOtherRegistrar').disabled = false;
