--- a/templates/add_domain.html
+++ b/templates/add_domain.html
@@ -14,7 +14,7 @@
         <button type="button" class="btn btn-secondary" id="submitButtonOtherRegistrar">Via un autre registrar</button>
     </form>
     <div class="progress mt-4 d-none" id="progressContainer">
-        <div id="progressBar" class="progress-bar progress-bar-animated progress-bar-striped" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        <div id="progressBar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
     <div id="messages"></div>
 </div>
@@ -101,7 +101,8 @@
         progressBar.animate({ width: progress + '%' }, 500).attr('aria-valuenow', progress);
         
         // Animation de couleur
-        const hue = (progress * 1.2) % 360; // Change de couleur en fonction de la progression
+        const baseHue = 30; // Teinte de base pour l'orange
+        const hue = (baseHue + (progress * 1.2)) % 360; // Ajuste la teinte en fonction de la progression
         progressBar.css('background-color', `hsl(${hue}, 100%, 50%)`);
         
         if (progress === 100) {
