--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,9 @@
                     <a class="nav-link" href="{{ url_for('editor.editor') }}">Rédiger un article</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('domains.domains') }}">Domaine</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('deployment.deployments') }}">Déploiements</a>
                 </li>
                 <li class="nav-item">
