--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="{{ url_for('editor.editor') }}">Rédiger un article</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('domains.domains') }}">Domaine</a>
+                    <a class="nav-link" href="{{ url_for('domains.domains') }}">Domaines</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('deployment.deployments') }}">Déploiements</a>
