--- a/templates/domains.html
+++ b/templates/domains.html
@@ -18,7 +18,7 @@
 
     <!-- Liste des domaines -->
     <h2>Domaines enregistrés</h2>
-    <table class="table">
+    <table class="table" id="domainList">
         <thead>
             <tr>
                 <th>Domaine</th>
@@ -26,7 +26,7 @@
                 <th>Actions</th>
             </tr>
         </thead>
-        <tbody id="domainList">
+        <tbody>
             <!-- Les domaines seront ajoutés ici dynamiquement -->
         </tbody>
     </table>
@@ -35,9 +35,14 @@
 </div>
 {% endblock %}
 
+{% block extra_css %}
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
+{% endblock %}
+
 {% block scripts %}
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.min.js"></script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
 <script>
     console.log('Script loaded');
 
@@ -55,7 +60,14 @@
     });
 
     $(document).ready(function() {
-        loadDomains();
+        loadDomains(); // Charger les domaines
+
+        // Initialiser DataTable pour la table des domaines
+        $('#domainList').DataTable({
+            "language": {
+                url: '//cdn.datatables.net/plug-ins/2.0.8/i18n/fr-FR.json',
+            }
+        });
 
         $('#domainForm').on('submit', function(e) {
             e.preventDefault();
