--- a/templates/add_domain.html
+++ b/templates/add_domain.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Ajouter un domaine{% endblock %}
+{% block title %}Installer un domaine{% endblock %}
 
 {% block content %}
 <div class="card shadow-lg p-4 mb-4 w-100">
-    <h1 class="card-title">Ajouter un domaine</h1>
+    <h1 class="card-title">Installer un domaine</h1>
     <form id="domainForm">
         <div class="form-group">
             <label for="domain">Nom de domaine</label>
